# smith-gateway

./: Cargo.toml  LICENSE  README.md  go.mod
.github/workflows/: ci.yml  publish-images.yml  release-cli.yml
cmd/smith/: main.go  main_test.go
docs/: api-sidecar.md  cli.md
docs/rfcs/: 0001-api-sidecar.md
internal/smithcli/: app.go  app_test.go  doc.go  example_test.go
service/api-sidecar/: Cargo.toml  Dockerfile  README.md
service/api-sidecar/examples/: github-public.yaml  local-dev.yaml  nhtsa-public.yaml
service/api-sidecar/src/: compiler.rs  config.rs  http.rs  main.rs
service/catalog/: Cargo.toml  Dockerfile
service/catalog/src/: http.rs  main.rs  oauth.rs  poller.rs  search.rs
service/mcp-index/: Cargo.toml  Dockerfile
service/mcp-index/src/: main.rs
service/mcp-index/static/: index.html
service/mcp-sidecar/: Cargo.toml  Dockerfile  README.md
service/mcp-sidecar/src/: http.rs  main.rs  mcp_client.rs  tenancy.rs
service/mcp-sidecar/src/middleware/: config.rs  env.rs  filter.rs  mod.rs  transform.rs
service/pg-auth-gateway/: Cargo.toml  Dockerfile
service/pg-auth-gateway/src/: main.rs
