[workspace]
resolver = "2"
members = [
    "service/mcp-sidecar",
    "service/catalog",
    "service/pg-auth-gateway",
    "service/api-sidecar",
]

[workspace.package]
version = "0.2.6"
edition = "2021"
authors = ["Smith Team"]
license = "MIT"
homepage = "https://sibylline.dev/products/smith"
description = "Smith MCP tool gateway and shim services"

[workspace.lints.rust]
warnings = "allow"
missing_docs = "warn"
unsafe_code = "allow"
unused_extern_crates = "warn"
unused_import_braces = "allow"
unused_imports = "allow"
unused_qualifications = "warn"
variant_size_differences = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
bool_comparison = "allow"
cast_precision_loss = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"

[workspace.dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.0", features = ["derive", "env"] }

[profile.release]
codegen-units = 1
lto = "fat"
panic = "abort"
strip = true
opt-level = 3
overflow-checks = false
debug-assertions = false
incremental = false

[profile.release-with-debug]
inherits = "release"
debug = true
strip = false
debug-assertions = true
