[package]
name = "api-sidecar"
version.workspace = true
edition.workspace = true

[[bin]]
name = "api-sidecar"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
axum = { version = "0.7", features = ["json"] }
tower-http = { version = "0.5", features = ["cors"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde_yaml = "0.9"
toml = "0.8"
url = "2"
urlencoding = "2"

[dev-dependencies]
tempfile = "3"
