[package]
name = "pg-auth-gateway"
version.workspace = true
edition.workspace = true

[[bin]]
name = "pg-auth-gateway"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
futures = "0.3"
async-trait = "0.1"
jsonwebtoken = "9"
pgwire = "0.38"
tokio-postgres = "0.7"
